Some work to update the marketing page forms
Merged the application and marketing form SCSS.

Added section in the styleguide for forms as a whole

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -141,6 +141,10 @@ img.pull-right {
   @include palette($gray-lighter, $plum);
 }
 
+.bg-white {
+  @include palette($white, $gray);
+}
+
 .bg-sea-green {
   @include palette($sea-green, #ffffff);
   &.gradient {
