--- a/scss/application.scss
+++ b/scss/application.scss
@@ -26,7 +26,7 @@
 @import 'application/global/dropdowns';
 @import 'application/global/lists';
 
-@import 'application/global/forms';
+@import 'elements/forms';
 @import 'application/global/progressbars';
 @import 'application/global/indicators';
 @import 'application/global/scrollbars';
