Adding style for help text using bullet lists

--- a/scss/application/global/_forms.scss
+++ b/scss/application/global/_forms.scss
@@ -367,4 +367,11 @@ select {
   margin-top: 0;
 }
 
+.helpList {
+  margin-left: 24px;
+  font-size: 13px;
+  color: $gray-darker;
+  list-style-type: disc;
+  list-style-position: inside;
 
+}
