Updated select2 styles
Changed selects in forms look.  The big change was moving the disclosure
arrow to the right side and putting it in the box.

Fixed some issues with the filter-style select.

Changed things so the default is the form-style (the one with the border
around it).

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,6 +5,7 @@
 //   <li><i class="icon-gray-darker"></i>Gray Darker<br>#393839</li>
 //   <li><i class="icon-gray-dark"></i>Gray Dark<br>#7e7f80</li>
 //   <li><i class="icon-gray"></i>Gray<br>#9fa0a1</li>
+//   <li><i class="icon-silver"></i>Silver<br>#c6c6c7</li>
 //   <li><i class="icon-gray-light"></i>Gray Light<br>#d9d9d9</li>
 //   <li><i class="icon-gray-lighter"></i>Gray Lighter<br>#F3F4F6</li>
 // </ul>
@@ -33,11 +34,13 @@
 $gray-darker:            #222626; // Charcoal
 $gray-dark:              #7e7f80; //
 $gray:                   #9fa0a1; // Medium Grey
+$silver:                 #c6c6c7;
 $gray-light:             #f4f4f7; // Light Grey
 $gray-lighter:           #F3F4F6; // 
 $white:                  #FFFFFF;
 
 $teal:                   #30957b;
+$magenta:                #e61972;
 $amaranth:               #f3254d;
 $turquoise:              #3da285;
 $plum:                   #5a2747;
