Combined the _variables.scss files
They were mostly similar, but there was a couple differences.  For the
most part, I went with the marketing page versions of the colors.

--- a/scss/application/_utils.scss
+++ b/scss/application/_utils.scss
@@ -74,17 +74,17 @@
 .text-right { text-align: right; }
 .text-center { text-align: center; }
 
-.text-gray-base { color: $gray-darker; }
 .text-gray-darker { color: $gray-darker; }
 .text-gray-dark { color: $gray-dark; }
 .text-gray { color: $gray; }
+.text-silver { color: $silver; }
 .text-gray-light { color: $gray-light; }
 .text-gray-lighter { color: $gray-lighter; }
 
 .text-plum { color: $plum; }
 .text-teal { color: $teal; }
 
-.text-lime-green { color: $lime; }
+.text-lime { color: $lime; }
 
 // Video Thumbnails
 //
