--- a/scss/application/views/_style_guide.scss
+++ b/scss/application/views/_style_guide.scss
@@ -97,7 +97,6 @@
         display: block;
         width: 100px;
         height: 50px;
-        &.icon-gray-base { background-color: $gray-darker; }
         &.icon-gray-darker { background-color: $gray-darker; }
         &.icon-gray-dark { background-color: $gray-dark; }
         &.icon-gray { background-color: $gray; }
@@ -109,7 +108,7 @@
         &.icon-amaranth { background-color: $amaranth; }
         &.icon-turquoise { background-color: $turquoise; }
         &.icon-plum { background-color: $plum; }
-        &.icon-lime-green { background-color: $lime; }
+        &.icon-lime { background-color: $lime; }
       }
     }
   }
