--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,6 @@
 // Color palette
 // 
 // <ul class="colorGrid">
-//   <li><i class="icon-gray-base"></i>Gray Base<br>#222626</li>
 //   <li><i class="icon-gray-darker"></i>Gray Darker<br>#393839</li>
 //   <li><i class="icon-gray-dark"></i>Gray Dark<br>#7e7f80</li>
 //   <li><i class="icon-gray"></i>Gray<br>#9fa0a1</li>
@@ -12,11 +11,12 @@
 // 
 // 
 // <ul class="colorGrid">
-//   <li><i class="icon-teal"></i>Teal<br>#1d806a</li>
+//   <li><i class="icon-teal"></i>Teal<br>#30957b</li>
+//   <li><i class="icon-amaranth"></i>Amaranth<br>#f3254d</li>
 //   <li><i class="icon-magenta"></i>Magenta<br>#e61972</li>
 //   <li><i class="icon-turquoise"></i>Turquoise<br>#3da285</li>
 //   <li><i class="icon-plum"></i>Plum<br>#632e50</li>
-//   <li><i class="icon-lime-green"></i>Lime Dark<br>#77a841</li>
+//   <li><i class="icon-lime"></i>Lime<br>#77a841</li>
 // </ul>
 // <hr>
 // <h3><em>Color Do’s</em></h3>
@@ -31,12 +31,12 @@
 // 
 // Styleguide palette
 
-$gray-darker:            #222626; // Charcoal
-$gray-dark:              #7e7f80; //
-$gray:                   #9fa0a1; // Medium Grey
+$gray-darker:            #222626;
+$gray-dark:              #7e7f80;
+$gray:                   #9fa0a1;
 $silver:                 #c6c6c7;
-$gray-light:             #f4f4f7; // Light Grey
-$gray-lighter:           #F3F4F6; // 
+$gray-light:             #d9d9d9;
+$gray-lighter:           #F3F4F6;
 $white:                  #FFFFFF;
 
 $teal:                   #30957b;
@@ -49,7 +49,6 @@ $cream:                  #fffdf8;
 $sea-green:              #38957c;
 $sea-green-dark:         #2f8665;
 
-
 $body-bg:                #ffffff;
 $text-color:             #5a2747;
 $brand-primary:          $plum;
@@ -59,17 +58,6 @@ $link-hover-color:      darken($link-color, 15%);
 
 $font-family-sans-serif:  'Open Sans', sans-serif;
 $headings-font-family:    'Raleway', sans-serif;
-
-// Media Queries
-$screen-lg-max:           1399px;
-$screen-md-max:           1199px;
-$screen-sm-max:           1023px;
-$screen-xs-max:           767px;
-
-$screen-xl-min:           1400px;
-$screen-lg-min:           1200px;
-$screen-md-min:           1024px;
-$screen-sm-min:           768px;
 
 
 // Animations
@@ -82,6 +70,18 @@ $use-pulse          : true;
 
 // From application styles
 $border-radius-base:        4px;
+
+
+// Media Queries
+$screen-lg-max:           1399px;
+$screen-md-max:           1199px;
+$screen-sm-max:           1023px;
+$screen-xs-max:           767px;
+
+$screen-xl-min:           1400px;
+$screen-lg-min:           1200px;
+$screen-md-min:           1024px;
+$screen-sm-min:           768px;
 
 
 // Form states and alerts
