--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -161,7 +161,7 @@ select {
 .buttonFile {
   position: relative;
   overflow: hidden;
-  border-radius: 0 4px 4px 0;
+  border-radius: 0 $border-radius-base $border-radius-base 0;
   padding: 0 10px;
   line-height: 32px;
   margin: 0;
