--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -459,3 +459,90 @@ legend {
   margin-bottom: 12px;
   border-bottom: 1px solid $gray-light;
 }
+
+// Hack to make the forms on marketing pages work.  We should unify the button code
+.form-actions .button {
+  display: inline-block;
+  width: auto;
+  height: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 7px 30px;
+  font-family: $font-family-sans-serif;
+  font-size: 15px;
+  font-weight: 600;
+  text-align: center;
+  vertical-align: middle;
+  background-image: none;
+  white-space: nowrap;
+  line-height: 1.42857;
+  border-radius: 4px;
+  user-select: none;
+  touch-action: manipulation;
+  cursor: pointer;
+  color: #fff;
+  background-color: $teal;
+  border: 1px solid $teal;
+  &:hover, &:focus {
+    color: #fff;
+    background-color: darken($teal, 10%);
+    outline: none;
+  }
+  &.block {
+    display: block;
+    width: 100%;
+    margin-bottom: 5px;
+  }
+  &.small {
+    padding: 2px 15px;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 1.5em;
+    border-radius: 3px;
+  }
+  &.disabled {
+    background-color: $gray-light;
+    border-color: $gray-light;
+    color: #393839;
+    cursor: default;
+  }
+  &.cta {
+    color: #fff;
+    background-color: $plum;
+    border-color: $plum;
+    &:hover, &:focus {
+      color: #fff;
+      background-color: darken($plum, 10%);
+    }
+  }
+  &.cta-reverse {
+    color: $plum;
+    background-color: transparent;
+    border-color: $plum;
+    &:hover, &:focus {
+      color: #fff;
+      background-color: darken($plum, 10%);
+    }
+  }
+  &.inline {
+    display: inline-block;
+    line-height: inherit;
+    padding: 0;
+    color: inherit;
+    background-color: transparent;
+    border-color: transparent;
+    font-weight: inherit;
+  }
+  &.borderless {
+    color: inherit;
+    background-color: transparent;
+    border-color: transparent;
+    font-weight: inherit;
+    &.inline {
+      margin: 0 10px;
+    }
+  }
+  i {
+    margin-right: 9px;
+  }
+}
