Updating form styles
Using padding is better than a big line height, just in case we want a
button with 2 lines of text.

--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -98,9 +98,9 @@ select {
 }
 input,
 select {
-  line-height: 37px;
+  line-height: 21px;
   width: 100%;
-  padding: 0 10px;
+  padding: 8px 10px;
   margin: 0;
   border: 1px solid $silver;
   border-radius: $border-radius-base;
@@ -162,10 +162,10 @@ select {
   position: relative;
   overflow: hidden;
   border: 1px solid $silver;
-  border-width-left: 0;
+  border-left-width: 0;
   border-radius: 0 $border-radius-base $border-radius-base 0;
-  padding: 0 10px;
-  line-height: 37px;
+  padding: 8px 10px;
+  line-height: 21px;
   margin: 0;
   font-size: 12px;
   font-weight: 400;
