Set color for fieldset legends

--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -467,6 +467,7 @@ fieldset {
 legend {
   margin-bottom: 12px;
   border-bottom: 1px solid $gray-light;
+  color: $gray-darker;
 }
 
 .fieldsetHelpBlock {
